--- a/bluebell/config.yaml
+++ b/bluebell/config.yaml
@@ -16,7 +16,7 @@ mysql:
   port: 3306
   user: "root"
   password: ""
-  dbname: "bluebell"
+  db_name: "bluebell"
   max_open_conns: 200
   max_idle_conns: 50
 redis:
